Add basic css styling

--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
             <div>
                 <h1>High Octane</h1>
             </div>
-            <div id="description">
+            <div class="description">
                 <h2>What is High Octane?</h2>
                 <p>High Octane is a simple game for car loves to test their knowledge of different car make and models
                     power and performance figures.</p>
             </div>
         </section>
+        <section id="how-to-play">
+            <button>How to play?</button>
+        </section>
         <section id="game-area">
-            <div class="bhp-game">Higher or lower bhp</div>
-            <div class="guess-bhp">Guess the cars power</div>
-            <div class="0to60-game">Higher or lower 0-60mph</div>
+            <div class="bhp-game game-box">Higher or lower bhp</div>
+            <div class="guess-bhp game-box">Guess the cars power
+                <input type="number" name="bhp" id="guess-bhp">
+            </div>
+            <div class="0to60-game game-box">Higher or lower 0-60mph</div>
         </section>
 
 
