--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <main>
-        <section id="heading">
-            <div>
+        <section>
+            <div id="heading">
                 <h1>High Octane</h1>
             </div>
             <div class="description">
@@ -24,11 +24,13 @@
             <button>How to play?</button>
         </section>
         <section id="game-area">
-            <div class="bhp-game game-box">Higher or lower bhp</div>
-            <div class="guess-bhp game-box">Guess the cars power
+            <div class="bhp-game game-box"><h3>Higher or lower bhp</h3></div>
+            <div class="guess-bhp game-box">
+                <h3>Guess the cars power</h3>
+                <br>
                 <input type="number" name="bhp" id="guess-bhp">
             </div>
-            <div class="0to60-game game-box">Higher or lower 0-60mph</div>
+            <div class="0to60-game game-box"><h3>Higher or lower 0-60mph</h3></div>
         </section>
 
 
