--- a/index.html
+++ b/index.html
@@ -4,38 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link css stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Link to fontawesome -->
+    <script src="https://kit.fontawesome.com/0e0604f2f3.js" crossorigin="anonymous"></script>
     <title>Project 2</title>
 </head>
 
 <body>
+    <!-- Main menu section/home page -->
     <main>
         <section>
             <div id="heading">
                 <h1>High Octane</h1>
             </div>
+            <!-- Description of what the website is for -->
             <div class="description">
                 <h2>What is High Octane?</h2>
                 <p>High Octane is a simple game for car loves to test their knowledge of different car make and models
                     power and performance figures.</p>
             </div>
         </section>
+        <!-- Explanation of how to play the 3 games -->
         <section id="how-to-play">
-            <button>How to play?</button>
+            <button aria-label="Click me to learn how to play">How to play?</button>
+            <p class="hide-element"></p>
         </section>
+        <!-- Game selection section -->
         <section id="game-area">
-            <div class="bhp-game game-box"><h3>Higher or lower bhp</h3></div>
-            <div class="guess-bhp game-box">
+            <div class="bhp-game game-box" aria-label="Click me to play higher or lower break horse power game">
+                <h3>Higher or lower bhp</h3>
+            </div>
+            <div class="guess-bhp game-box" aria-label="Play guess the cars power game here">
                 <h3>Guess the cars power</h3>
                 <br>
                 <input type="number" name="bhp" id="guess-bhp">
+                <input type="submit" name="submit-answer" id="bhp-submit">
             </div>
-            <div class="0to60-game game-box"><h3>Higher or lower 0-60mph</h3></div>
+            <div class="0to60-game game-box" aria-label="Click me to play higher or lower 0-60mph time game">
+                <h3>Higher or lower 0-60mph</h3>
+            </div>
         </section>
-
-
-
+        <!-- Dispay current and highest score -->
+        <section id="score">
+            <h2>High Score: <span id="home-high-score"></span></h2>
+            <h2>Current Score: <span id="home-current-score"></span></h2>
+        </section>
+        <footer>
+            <h4>This site was built by James Burch</h4><i class="fa-brands fa-linkedin"></i><i
+                class="fa-brands fa-square-github"></i>
+        </footer>
     </main>
+    <!-- Link JavaScript file -->
     <script src="assets/js/script.js"></script>
 </body>
 
