Add JS and CSS to open and close the how to play menu

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
         </section>
         <!-- Explanation of how to play the 3 games -->
         <section id="how-to-play">
-            <button aria-label="Click me to learn how to play">How to play?</button>
-            <p class="hide-element"></p>
+            <button class="htp-btn" id="showButton" aria-label="Click me to learn how to play">How to play?</button>
+            <div id="how-to-play-box">
+                <span id="close-btn"><i class="fa-solid fa-x"></i></span>
+                <p>This tells you how to play the game</p>
+            </div>
         </section>
         <!-- Game selection section -->
         <section id="game-area">
@@ -68,9 +71,10 @@
                 </div>
             </div>
         </footer>
+        <script src="assets/js/script.js"></script>
     </main>
     <!-- Link JavaScript file -->
-    <script src="assets/js/script.js"></script>
+    
 </body>
 
 </html>
