Add styling to how to play menu

--- a/index.html
+++ b/index.html
@@ -29,8 +29,21 @@
         <section id="how-to-play">
             <button class="htp-btn" id="showButton" aria-label="Click me to learn how to play">How to play?</button>
             <div id="how-to-play-box">
-                <span id="close-btn"><i class="fa-solid fa-x"></i></span>
-                <p>This tells you how to play the game</p>
+                <span id="close-btn"><i class="fa-solid fa-xmark"></i></span>
+                <div class="htp-text">
+                    <h2>How to play:</h2>
+                    <p>To play the higher or lower games simply look at the car on the right and decide if you believe
+                        it to
+                        have more or less power or 0-60mph time than the car on the left, if you think higher select the
+                        higher button or lower select the lower button, if you are correct the game will continue and
+                        you
+                        will then have to guess if the next car is higher or lower than the last.
+                        For the game guessing the bhp simple enter a whole number between 1 and 1000 and click submit
+                        (or
+                        enter on a computer). If you are within 10bhp then you will get the answer correct, if you are
+                        further than 10bhp from the answer it will prompt you to guess higher or lower.
+                    </p>
+                </div>
             </div>
         </section>
         <!-- Game selection section -->
@@ -74,7 +87,7 @@
         <script src="assets/js/script.js"></script>
     </main>
     <!-- Link JavaScript file -->
-    
+
 </body>
 
 </html>
