Create info.js folder to hold all car data

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         </section>
         <!-- Explanation of how to play the 3 games -->
         <section id="how-to-play">
+            <!-- This button is used to unhide the how to play menu-->
             <button class="htp-btn" id="showButton" aria-label="Click me to learn how to play">How to play?</button>
             <div id="how-to-play-box">
+                <!-- This span allows the JS to close the how to play menu when the X is clicked -->
                 <span id="close-btn"><i class="fa-solid fa-xmark"></i></span>
                 <div class="htp-text">
                     <h2>How to play:</h2>
@@ -84,10 +86,11 @@
                 </div>
             </div>
         </footer>
-        <script src="assets/js/script.js"></script>
+        
     </main>
-    <!-- Link JavaScript file -->
-
+    <!-- Link JavaScript files -->
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/info.js"></script>
 </body>
 
 </html>
