--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <!-- Main menu section/home page -->
     <main>
+     <section id="main-menu"> 
         <section>
             <div id="heading">
                 <h1>High Octane</h1>
@@ -21,7 +22,7 @@
             <!-- Description of what the website is for -->
             <div class="description">
                 <h2>What is High Octane?</h2>
-                <p>High Octane is a simple game for car loves to test their knowledge of different car make and models
+                <p>High Octane is a simple game for car lovers to test their knowledge of different car make and models
                     power and performance figures.</p>
             </div>
         </section>
@@ -50,14 +51,14 @@
         </section>
         <!-- Game selection section -->
         <section id="game-area">
-            <div class="bhp-game game-box" aria-label="Click me to play higher or lower break horse power game">
+            <button id="game-btn" data-game="power-game" class="bhp-game game-box game-btn" aria-label="Click me to play higher or lower break horse power game">
                 <h3>Higher or lower bhp</h3>
-            </div>
-            <div class="0to60-game game-box" aria-label="Click me to play higher or lower 0-60mph time game">
-                <h3>Higher or lower 0-60mph</h3>
-            </div>
-            <div class="guess-bhp game-box" aria-label="Play guess the cars power game here">
-                <h3>Guess the cars power</h3>
+            </button>
+            <button id="game-btn" data-game="topspeed-game" class="topspeed-game game-box game-btn" aria-label="Click me to play higher or lower top speed game">
+                <h3>Higher or lower top speed</h3>
+            </button>
+            <div class="accel-game game-box" aria-label="Play guess the cars 0-60mph time here">
+                <h3>Guess the cars 0-60mph time</h3>
                 <br>
                 <input type="number" name="bhp" id="guess-bhp-box">
                 <input type="submit" name="submit-answer" id="submit">
@@ -86,7 +87,11 @@
                 </div>
             </div>
         </footer>
-        
+    </section>
+    <section id="game-screen">
+        <div id="power-game" class="game-content" style="display: none;">This is the power game</div>
+        <div id="topspeed-game" class="game-content" style="display: none;">This is the top speed game</div>
+    </section>
     </main>
     <!-- Link JavaScript files -->
     <script src="assets/js/script.js"></script>
