Fix game content display when each game is selected

--- a/index.html
+++ b/index.html
@@ -89,8 +89,11 @@
         </footer>
     </section>
     <section id="game-screen">
-        <div id="power-game" class="game-content" style="display: none;">This is the power game</div>
-        <div id="topspeed-game" class="game-content" style="display: none;">This is the top speed game</div>
+        <div id="power-game" class="game-content" >
+        <div id="prev-car">Previous Car</div>
+        <div id="next-car">Current Car</div>
+        </div>
+        <div id="topspeed-game" class="game-content">This is the top speed game</div>
     </section>
     </main>
     <!-- Link JavaScript files -->
