--- a/index.html
+++ b/index.html
@@ -94,19 +94,15 @@
                 </div>
             </footer>
         </section>
-        <section id="game-screen">
-            <div id="power-game" class="game-content">
-                <div id="prev-car">Previous Car</div>
-                <div id="next-car">Current Car</div>
-            </div>
-            <div id="topspeed-game" class="game-content">
-                <div id="prev-car">Previous Car</div>
-                <div id="next-car">Current Car</div>
-            </div>
-            <div id="price-game" class="game-content">
-                <div id="prev-car">Previous Car</div>
-                <div id="next-car">Current Car</div>
-            </div>
+        <section id="prev-car">
+            <h2><span id="prev-car-name"></span></h2>
+            <h3>Produces<span id="prev-car-power"></span> break horse power</h3>
+
+        </section>
+        <section id="next-car">
+            <h2>Has a <span id="next-car-name"></span> got more power?</h2>
+            <button id="higher-btn">Higher</button>
+            <button id="lower-btn">Lower</button>
         </section>
     </main>
     <!-- Link JavaScript files -->
