Change structure of HTML and JS code for the game screen

--- a/index.html
+++ b/index.html
@@ -94,20 +94,27 @@
                 </div>
             </footer>
         </section>
+    <section class="game-screen" id="game-screen">
         <section id="prev-car">
-            <h2><span id="prev-car-name"></span></h2>
-            <h3>Produces<span id="prev-car-power"></span> break horse power</h3>
-
+            <img src="" alt="Car image prev car">
+            <div class="overlay">
+                <p></p>
+                <p>Power:</p>
+            </div>
         </section>
         <section id="next-car">
-            <h2>Has a <span id="next-car-name"></span> got more power?</h2>
-            <button id="higher-btn">Higher</button>
-            <button id="lower-btn">Lower</button>
+            <img src="" alt="Car image next car">
+            <div class="overlay">
+                <p></p>
+                <button id="higher-btn">Higher</button>
+                <button id="lower-btn">Lower</button>
+            </div>
         </section>
+    </section>
     </main>
     <!-- Link JavaScript files -->
-    <script src="assets/js/script.js"></script>
     <script src="assets/js/info.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
