Add JS code to insert random cars for power car game

--- a/index.html
+++ b/index.html
@@ -96,16 +96,18 @@
         </section>
     <section class="game-screen" id="game-screen">
         <section id="prev-car">
-            <img src="" alt="Car image prev car">
+            <img src="" alt="Car image">
             <div class="overlay">
-                <p></p>
-                <p>Power:</p>
+                <p>Name: </p>
+                <p>Power: </p>
             </div>
         </section>
+        <div id="score">Score:</div>
         <section id="next-car">
-            <img src="" alt="Car image next car">
+            <img src="" alt="Car image">
             <div class="overlay">
-                <p></p>
+                <p>Name: </p>
+                <p>Power: ?</p>
                 <button id="higher-btn">Higher</button>
                 <button id="lower-btn">Lower</button>
             </div>
