Commit final changes for session

--- a/index.html
+++ b/index.html
@@ -98,18 +98,20 @@
         <section id="prev-car">
             <img src="" alt="Car image">
             <div class="overlay">
-                <p>Name: </p>
+                <!-- Name of the car will be inserted here when the game is started -->
+                <p></p>
+                <!-- The power of the selected car will display here when the game is started -->
                 <p>Power: </p>
             </div>
         </section>
-        <div id="score">Score:</div>
         <section id="next-car">
             <img src="" alt="Car image">
             <div class="overlay">
                 <p>Name: </p>
-                <p>Power: ?</p>
+                <p>Power: XXX</p>
                 <button id="higher-btn">Higher</button>
                 <button id="lower-btn">Lower</button>
+                <p id="score">Score: 0</p>
             </div>
         </section>
     </section>
