--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </button>
             </section>
             <!-- Dispay current and highest score -->
-            <section id="score">
+            <section id="scor">
                 <h2>Current Score: <span id="home-current-score"></span></h2>
                 <h2>High Score: <span id="home-high-score"></span></h2>
             </section>
@@ -101,17 +101,17 @@
                 <!-- Name of the car will be inserted here when the game is started -->
                 <p></p>
                 <!-- The power of the selected car will display here when the game is started -->
-                <p>Power: </p>
+                <p class="power">Power: </p>
             </div>
         </section>
+        <p id="score">Score: 0</p>
         <section id="next-car">
             <img src="" alt="Car image">
             <div class="overlay">
                 <p>Name: </p>
-                <p>Power: XXX</p>
+                <p class="power">Power: XXX</p>
                 <button id="higher-btn">Higher</button>
                 <button id="lower-btn">Lower</button>
-                <p id="score">Score: 0</p>
             </div>
         </section>
     </section>
