Add menu for wrong answer input, direct to main menu or play again

--- a/index.html
+++ b/index.html
@@ -109,12 +109,18 @@
             <img src="" alt="Car image">
             <div class="overlay">
                 <p>Name: </p>
-                <p class="power">Power: XXX</p>
+                <p class="power">Power: ?</p>
                 <button id="higher-btn">Higher</button>
                 <button id="lower-btn">Lower</button>
             </div>
         </section>
     </section>
+    <!-- Wrong answer menu to access main menu or play again -->
+    <nav id="game-end-menu" class="game-end-menu">
+        <p id="final-score"></p>
+        <button id="play-again-btn">Play Again</button>
+        <button id="main-menu-btn">Main Menu</button>
+    </nav>
     </main>
     <!-- Link JavaScript files -->
     <script src="assets/js/info.js"></script>
