Style the game end screen

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
             </section>
         </section>
         <!-- Wrong answer menu to access main menu or play again -->
-        <nav id="game-end-menu">
+        <nav id="game-end-menu" class="game-end-menu">
+            <img id="game-end-img" src="assets/images/clarkson.jpeg" alt="">
             <div class="overlay-menu">
                 <p id="final-score"></p>
                 <button id="play-again-btn">Play Again</button>
