Add high score function, fix start game function

--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
                 </button>
             </section>
             <!-- Dispay current and highest score -->
-            <section id="scor">
-                <h2>Current Score: <span id="home-current-score"></span></h2>
-                <h2>High Score: <span id="home-high-score"></span></h2>
+            <section class="high-score">
+                <p id="highscore">High Score: </p>
             </section>
             <!-- Footer - displaying links to my linked in and github profiles -->
             <footer>
