Fix some styling on larger screen sizes

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
             </section>
             <!-- Dispay current and highest score -->
             <section class="high-score">
-                <p id="highscore">High Score: </p>
+                <p id="high-score">High Score: </p>
             </section>
             <!-- Footer - displaying links to my linked in and github profiles -->
             <footer>
+                <div id="site-build">
+                    <h4>This site was built by James Burch</h4>
+                </div>
                 <div id="footer">
-                    <div id="site-build">
-                        <h4>This site was built by James Burch</h4>
-                    </div>
                     <div id="linkedin">
                         <a href="https://www.linkedin.com/in/james-burch-16a206227/" target="_blank" rel="noopener"
                             aria-label="Link to my linked in profile(opens in a new tab)"><i
