Add meta tags and favicon link to head

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"
+        content="higher or lower, game, car game, higher or lower game, high octane, car higher or lower game, guessing game, fun game, simple game">
+    <meta name="description" content="High Octane is a fun higher or lower guessing game perfect for car lovers to test their knowledge of exotic cars">
     <!-- Link css stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Link to fontawesome -->
     <script src="https://kit.fontawesome.com/0e0604f2f3.js" crossorigin="anonymous"></script>
-    <title>Project 2</title>
+    <!-- Link to favicon -->
+    <link rel="icon" href="favicon.ico">
+    <title>High Octane</title>
 </head>
 
 <body>
@@ -49,12 +54,12 @@
                         </p>
                     </div>
                 </div>
-                 <!-- Dispay current and highest score -->
-            <div class="high-score">
-                <p id="high-score">High Score: </p>
-            </div>
+                <!-- Dispay current and highest score -->
+                <div class="high-score">
+                    <p id="high-score">High Score: </p>
+                </div>
             </section>
-           
+
             <!-- Game selection section -->
             <section id="game-area">
                 <button id="game-btn-bhp" data-game="power-game" class="bhp-game game-box game-btn"
