Add features and function descriptions to readme.md

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </section>
         <!-- Wrong answer menu to access main menu or play again -->
         <nav id="game-end-menu" class="game-end-menu">
-            <img id="game-end-img" src="assets/images/clarkson.jpeg" alt="">
+            <img id="game-end-img" src="assets/images/jeremyclarksonimage.jpeg" alt="">
             <div class="overlay-menu">
                 <p id="final-score"></p>
                 <button id="play-again-btn">Play Again</button>
